variables.Variables.scala.code
var nbPas:int = 0

while (!estSurBiscuit()){
  avance()
  nBPas = nbPas + 1
}
*/ on met les buggle sur biscuit*/

prendBiscuit()
retourne()

var dejaFait:int = 0

while (dejaFait != nbPas){
  avance()
}
/* les buggle revienne au d?part*/

retourne()